Salesforce CPQ/main/default/objects/PriceRule__c/PriceRule__c.object-meta.xml
<CustomObject>
    <customHelpPage>PriceRuleHelp</customHelpPage>
    <description>Rule that affects pricing for an option or quote line</description>
    <label>Price Rule</label>
    <nameField>
        <label>Price Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>