Salesforce CPQ/main/default/objects/PriceRule__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this rule is active or not.</description>
    <inlineHelpText>Indicates whether this rule is active or not.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>