Salesforce CPQ/main/default/objects/PriceRule__c/fields/AdvancedCondition__c.field-meta.xml
<CustomField>
    <fullName>AdvancedCondition__c</fullName>
    <description>Can only be entered if the Conditions Met is Custom. Enter a combination of the Price Condition Index #s, AND, OR, and parenthesis (e.g. (123 AND 124) AND 125).</description>
    <inlineHelpText>Can only be entered if the Conditions Met is Custom. Enter a combination of the Price Condition Index #s, AND, OR, and parenthesis (e.g. (123 AND 124) AND 125).</inlineHelpText>
    <label>Advanced Condition</label>
    <type>TextArea</type>
</CustomField>