Salesforce CPQ/main/default/objects/PriceRule__c/fields/LookupObject__c.field-meta.xml
<CustomField>
    <fullName>LookupObject__c</fullName>
    <description>API Name of the Custom Object that stores the lookup data.</description>
    <inlineHelpText>API Name of the Custom Object that stores the lookup data.</inlineHelpText>
    <label>Lookup Object</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SBQQ__LookupData__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>