Salesforce CPQ/main/default/objects/PriceRule__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional field that makes this rule specific to the product.</description>
    <inlineHelpText>Choose a product to associate to this rule.</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Price Rules</relationshipLabel>
    <relationshipName>PriceRules</relationshipName>
    <type>Lookup</type>
</CustomField>